# velocity

./: .gitignore  .gitmodules  README.md  example.vtmp  pyproject.toml  requirements.txt  settings.yaml  setup-env.sh  velocity  vtmp.vim
.github/workflows/: build.yaml  docs.yaml  documentation.yml  linter.yaml  python-publish.yml  release.yaml  static.yml  tests.yaml
assets/artwork/: icon.drawio
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/reference/: backends.rst  build.rst  config.rst  index.rst  python_api.rst  specifications.rst  specs.rst  vtmp.rst
docs/source/starting/: basic.rst  index.rst  setup.rst  tutorial.rst  usage.rst
lib/: backends.py  build.py  exceptions.py  graph.py  print.py  template.py
misc/artwork/: icon_name.drawio
misc/vim/: vtmp.vim
src/velocity/: __init__.py  __main__.py  _backends.py  _build.py  _config.py  _exceptions.py  _graph.py  _graph_old.py  _print.py  _tools.py
tests/: __init__.py  test__config.py  test__graph.py
